--- a/css/golfStyle.css
+++ b/css/golfStyle.css
@@ -11,7 +11,7 @@ body
     background-position: bottom;
     background-size: cover;
     overflow: hidden;
-
+    font-family: 'Josefin Sans', sans-serif;
 }
 #cardHeader
 {
@@ -41,17 +41,25 @@ body
     box-sizing: border-box;
 }
 
+#holeHeader
+{
+    background-color: darkgreen;
+}
+
 #teesContainer
 {
     width: 100%;
     border-radius: 5px;
     overflow: hidden;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
-.tees
+.tees, #holeHeader
 {
     width: 100%;
     height: 30px;
+    padding: 5px;
+    box-sizing: border-box;
 }
 #pro
 {
@@ -68,4 +76,12 @@ body
 #women
 {
     background-color: #ff0000;
+}
+
+#scoreCard
+{
+    width: 100%;
+    padding: 5px;
+    min-height: 300px;
+    background-color: white;
 }
