--- a/css/golfStyle.css
+++ b/css/golfStyle.css
@@ -61,6 +61,8 @@ body
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+    display: none;
 }
 
 .tees, #holeHeader, #parValues
@@ -81,11 +83,23 @@ body
     cursor: pointer;
 }
 
+#courseContainer
+{
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Proza Libre', sans-serif;
+    background-color: rgba(50, 50, 200, 0.8);
+    border-radius: 5px;
+    color: burlywood;
+    text-shadow: 1px 1px 1px black;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+}
+
 #scoreCard
 {
     width: 100%;
     padding: 5px;
-    margin-top: 10px;
     min-height: 300px;
     background-color: white;
     box-sizing: border-box;
