--- a/css/golfStyle.css
+++ b/css/golfStyle.css
@@ -68,7 +68,6 @@ body
 .tees, #holeHeader, #parValues
 {
     width: 100%;
-    padding: 5px;
     box-sizing: border-box;
     font-weight: bold;
 }
@@ -84,6 +83,7 @@ body
 }
 .removePlayerBtn
 {
+    float: right;
     color: red;
     padding-left: 5px;
 }
@@ -170,4 +170,42 @@ body
 {
     border-radius: 20px;
     padding: 5px;
+}
+
+.yardage, .headers, .holeScore
+{
+    display: inline-block;
+    padding: 5px;
+    box-sizing: border-box;
+    font-size: 20px;
+}
+
+.headers
+{
+    width: 15%;
+}
+
+.yardage, .holeScore
+{
+    border-left: 1px solid black;
+    width: 4%;
+    text-align: center;
+}
+
+.scoreField
+{
+    width: 90%;
+    box-sizing: border-box;
+    /*border: none;*/
+}
+
+.playerBar
+{
+    border: 1px solid black;
+}
+
+.invalidScore
+{
+    border-color: red;
+    background-color: pink;
 }
