--- a/css/golfStyle.css
+++ b/css/golfStyle.css
@@ -132,17 +132,18 @@ body
     text-align: center;
 }
 
-#playerModal
+#playerModal, #mapModal
 {
     display: none;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.7);
     z-index: 2000;
     left: 0;
     top: 0;
-    padding: 50px;
+    padding-top: 50px;
+    box-sizing: border-box;
 }
 
 #modalContent
@@ -150,7 +151,6 @@ body
     margin: 0px auto;
     padding: 20px;
     width: 50%;
-    overflow: hidden;
     background-color: white;
     border-radius: 10px;
     display: none;
@@ -197,7 +197,6 @@ body
     width: 90%;
     box-sizing: border-box;
     text-align: center;
-    /*border: none;*/
 }
 
 .playerBar
@@ -214,4 +213,36 @@ body
 .scoreDisplay
 {
     margin: 10px;
+}
+
+#mapModal
+{
+    overflow: hidden;
+}
+#mapModalContent
+{
+    margin: 0px auto;
+    width: 80%;
+    height: 800px;
+    overflow: hidden;
+    background-color: white;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+#map
+{
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+}
+
+#closePlayerModal, #closeMapModal
+{
+    position: absolute;
+    top: 20px;
+    right: 70px;
+    color: white;
+    font-size: 50px;
+    cursor: pointer;
 }
