--- a/css/golfStyle.css
+++ b/css/golfStyle.css
@@ -45,10 +45,17 @@ body
 
 #loading
 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
     display: none;
     color: blueviolet;
     text-shadow: 1px 1px 1px black;
     text-align: center;
+    padding-top: 300px;
 }
 #holeHeader
 {
@@ -133,7 +140,7 @@ body
     text-align: center;
 }
 
-#playerModal, #mapModal
+#playerModal, #mapModal, #splashModal
 {
     display: none;
     position: absolute;
@@ -145,6 +152,12 @@ body
     top: 0;
     padding-top: 50px;
     box-sizing: border-box;
+}
+
+#splashModal
+{
+    background-image: url("../images/black_twill.png");
+    display: block;
 }
 
 #modalContent
@@ -252,4 +265,50 @@ body
     position: fixed;
     top: 10px;
     left: 600px;
+}
+
+#splashModalContent
+{
+    margin: 50px;
+    text-align: center;
+    color: white;
+}
+
+#coursesLoading
+{
+    margin: 20px;
+    font-size: 30px;
+}
+
+#loadingBar
+{
+    margin: 0 auto;
+    width: 390px;
+    height: 40px;
+    background-color: black;
+    border-radius: 10px;
+    box-shadow: 0px 1px 3px white inset, 0px 0px 8px rgba(0, 0, 0, 0.6);
+}
+#cylonEye
+{
+    position: relative;
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    background-color: darkred;
+    box-shadow: 0px 1px 3px white inset, 0px 0px 8px rgba(255, 0, 0, 0.6);
+}
+
+#courseInfo
+{
+    width: 80%;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px black;
+    overflow: hidden;
+}
+
+#courseMap
+{
+    width: 100%;
+    height: 300px;
 }
