--- a/css/golfStyle.css
+++ b/css/golfStyle.css
@@ -132,7 +132,7 @@ body
     text-shadow: 2px 2px 2px black;
 }
 
-#courseSelectBtn
+#courseSelectBtncontainer
 {
     position: absolute;
     bottom: 10px;
@@ -189,7 +189,7 @@ body
 .yardage, .headers, .holeScore
 {
     display: inline-block;
-    padding: 5px;
+    padding: 10px;
     box-sizing: border-box;
     font-size: 20px;
 }
@@ -206,11 +206,19 @@ body
     text-align: center;
 }
 
+/*.holeScore*/
+/*{*/
+    /*padding: 10px;*/
+/*}*/
+
 .scoreField
 {
     width: 90%;
-    box-sizing: border-box;
+    border-radius: 4px;
+    margin: 0px auto;
     text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 15px;
 }
 
 .playerBar
@@ -311,4 +319,55 @@ body
 {
     width: 100%;
     height: 300px;
+}
+
+button
+{
+    box-shadow: 3px 4px 5px black;
+    background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#bab1ba',GradientType=0);
+    background-color:#ededed;
+    border-radius:15px;
+    border:1px solid #d6bcd6;
+    display: inline-block;
+    cursor: pointer;
+    color: #3a8a9e;
+    font-size: 15px;
+    padding: 5px 15px 2px 15px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #e1e2ed;
+    font-family: 'Josefin Sans', sans-serif;
+}
+button:hover {
+    background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bab1ba', endColorstr='#ededed',GradientType=0);
+    background-color:#bab1ba;
+}
+button:active
+{
+    position: relative;
+    top: 1px;
+}
+
+#newPlayerDiv
+{
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+#playerNumbers
+{
+    font-size: 15px;
+    border-radius: 4px;
+    padding-left: 5px;
+}
+
+#newPlayerBtn
+{
+    margin: 0px 10px;
+}
+
+#playerSubmitBtn
+{
+    margin: 20px;
 }
